# mesoscaler

./: .gitignore  README.md  Untitled-1.ipynb  pyproject.toml  requirements.txt  setup.py  t.py  taplo.toml
models/: mae.py  metrics.py  utils.py  vit.py
notebooks/: 0. get-data.ipynb  0. typing.ipynb  1. introduction.ipynb  1. metadata-enums.ipynb  2. meso-scaling.ipynb  2. resampling.ipynb  2. sampling.ipynb  3. create.ipynb  3. resampling.ipynb  3. sampling.ipynb  3. worker-consumer.ipynb  4. training-data.ipynb  4. typing.ipynb  4. worker-consumer.ipynb  5. final.ipynb  cartopy.ipynb
notebooks/misc/: resampler.py  sampling.py  torch-data.ipynb
scripts/: create_training_data.py  get_era5.py  get_gribs.py  get_urma.py  get_wb2full.py  grib2zarr.py  install-eccodes.sh  make_config.py
src/mesoscaler/: __init__.py  _compat.py  _metadata.py  _metadata.pyi  _time.py  _torch_compat.py  _typeshed.py  _typing.py  core.py  create.py  display.py  enums.py  generic.py  sampling.py  time64.py  utils.py
src/mesoscaler/_C/: __init__.pyi  core.c  lib.c  lib.h
src/mesoscaler/sampling/: display.py  domain.py  intersection.py  resampler.py  sampler.py
tests/: conftest.py  core_test.py  create_test.py  enums_test.py  generic_test.py  time64_test.py  utils_test.py
tests/samplling/: intersection_test.py  resampler_test.py  sampling_test.py
